// updated title and logo.. // some UI fixes

--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="../src/logo.png"/>
+    <link rel="icon" href="logo.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="Automation Everywhere"
+      content="Automation Anywhere"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -23,7 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Automation Everywhere</title>
+    <title>Automation Anywhere</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
